$Id$

Version 0.5 (...)

- Fixed boundary condition error in grizzled.file.eglob()

---------------------------------------------------------------------------

Version 0.4 (20 May, 2008)

- Converted public functions, methods, parameters and variables that use
  camel case names to names that are more consistent with standard Python
  naming conventions. Existing camel case functions are still in the API,
  but are deprecated. Calling them will result in a runtime warning.

---------------------------------------------------------------------------

Version 0.3 (8 May, 2008)

- Created grizzled.io.filelock module, with a FileLock class that provides
  a portable file locking interface.
- Added grizzled.file.eglob() function.
- Added grizzled.os.withDirectory(), a context manager for the "with"
  statement.
- Added grizzled.io.PushbackFile class
- Added grizzled.file.copyRecursively() function
- Moved CommandLineParser from grizzled.optparse to grizzled.cmdline
- Augmented CommandLineParser to permit specifying an epilogue to be printed
  at the end of the usage message.
- Added grizzled.net.download() function
- Added grizzled.io.Zip class

---------------------------------------------------------------------------

Version 0.2 (2 April, 2008)

- Initial version posted to the web.