@@ -3,6 +3,8 @@ $Id$
 Version 0.5 (...)
 
 - Fixed boundary condition error in grizzled.file.eglob()
+- Added grizzled.os.file_separator() function.
+- Changed grizzled.os.get_path_separator() to grizzled.os.path_separator().
 
 ---------------------------------------------------------------------------
 
